repaired last experience card overlaping

--- a/src/scss/experience.scss
+++ b/src/scss/experience.scss
@@ -1,6 +1,3 @@
-.experience-container {
-}
-
 .timeline {
   position: relative;
 
@@ -63,6 +60,10 @@
     }
     &:last-of-type {
       margin-bottom: 0;
+
+      @media #{$mobile} {
+        margin-top: 120px;
+      }
     }
   }
 }
