--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -8,10 +8,9 @@
   }
 
   &__img-container {
-    margin: 0 auto;
     text-align: center;
-    height: 100px;
-    width: 100px;
+    height: 150px;
+    width: 100%;
     line-height: 100px;
 
     @media #{$tablet} {
